Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.12.0
Description
After upgrading to Qt Creator from 4.11 to 4.12, I couldn't run any cmake projects anymore.
09:23:27: Starting D:\mchiasson\Documents\build-untitled-Desktop_Qt_5_12_4_MSVC2017_64bit-Debug\untitled.exe ... 09:23:27: The program has unexpectedly finished. 09:23:27: The process was ended forcefully. 09:23:27: D:\mchiasson\Documents\build-untitled-Desktop_Qt_5_12_4_MSVC2017_64bit-Debug\untitled.exe crashed.
I noticed that there were library files in the Run Path:
So I manually modified the Path from
C:\Qt\5.12.4\msvc2017_64\lib\Qt5Widgetsd.lib C:\Qt\5.12.4\msvc2017_64\lib\Qt5Guid.lib C:\Qt\5.12.4\msvc2017_64\lib;C:\Qt\5.12.4\msvc2017_64\lib\Qt5Widgetsd.lib C:\Qt\5.12.4\msvc2017_64\lib\Qt5Guid.lib C:\Qt\5.12.4\msvc2017_64\bin; ... ... ...
to:
C:\Qt\5.12.4\msvc2017_64\lib;C:\Qt\5.12.4\msvc2017_64\bin; ...
And now I can run the application again. Any idea why there are library files in the Run Path now in Qt Creator 4.12?
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-24091 Qt Creator can't add build library search path to PATH
-
- Closed
-