CMake: Filter out non-directories from LD_LIBRARY_PATH/PATH

Task-number: QTCREATORBUG-23997
Change-Id: I4b92cd484305614b30c70bbdbd8815b0d85b7d98